# paelladoc

./: .cursorrules  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Dockerfile  Gemfile  LICENSE  README.md  VERSION  _config.yml  alembic.ini  paelladoc_core.py  paelladoc_memory.db  pyproject.toml  repopackpy-output.txt  requirements.txt  ruff.toml  server.py  setup.py  smithery.yaml  validate-docs.sh
.cursor/: mcp.json
.cursor/rules/: 000-paelladoc.mdc  code_analysis.mdc  documentation_workflow.mdc  paelladoc.mdc  paelladoc_conversation_config.json
.cursor/rules/config/: paelladoc_conversation_config.json
.cursor/rules/core/: commands.mdc  git_hook_installer.sh  init_memory.sh  memory_management.mdc  memory_updater.sh  plantilla_contexto.json  plantilla_memoria.json
.cursor/rules/docs/: 001-pre_coding_requirements.mdc  README.md  authorization_rules.mdc  commands  commands.mdc  enforce_interactive.mdc
.cursor/rules/examples/: .cursorrules  paella_doc.mdc.example
.cursor/rules/features/: code_generation.mdc  conversation_workflow.mdc  interfaces.mdc  project_memory.mdc
.cursor/rules/instructions/: 01_new_project.md  02_continue_project.md  04_project_memory.md  05_coding_styles.md  05_coding_styles_en.md  06_git_workflows_en.md
.cursor/rules/orchestrator/: paelladoc.mdc
.cursor/rules/scripts/: analyze_repo_context.py  complete_doc_generator.py  extract_repo_content.py  read_context.py  run_continue.py  run_generate_doc.py  simple_extract.py  simple_pdf_generator.py  (+2 more)
.github/workflows/: ci.yml  pages.yml  protect-main.yml
.notes/Product/: 01_market_research.md  04_product_definition.md  04a_architecture_decision_record.md  05_product_roadmap.md  11_task_management.md
.notes/simplified_templates/: 00_index.md  source_verification_template.md
alembic/: env.py
alembic/versions/: 07663acc4960_initial_schema_with_projectmemorydb_and_.py  297f102e7967_add_authorship_and_defaults_to_models.py  2f250289cd7a_add_is_active_to_project.py  473a64e48560_add_user_table.py  d8155dd520f3_sync_models_after_fixing_history.py
docs/PAELLASEO/: .memory.json
instructions/: COMMAND_MIGRATION.md  GENERATE_DOC.md
mcp_server/tests/: test_ping.py
pages/: .gitignore  .htaccess  .ruby-lsp.yml  00_index.md  Gemfile  _config.development.yml  _config.production.yml  _config.yml  about.md  bug_documentation.md  commands.md  delete_project.sh  feature_documentation.md  index.md  paelladoc.sh  quick_task_documentation.md  robots.txt  set_private.sh  sitemap.xml  sync_projects.sh  update_gitignore.sh
pages/_includes/: footer.html  head.html  header.html
pages/_layouts/: default.html  project-layout.html
pages/en/: index.html
pages/es/: index.html  index.md
pages/projects/: index.md
schemas/: seo-frontmatter.yaml
scripts/: mece_audit.py  seed_config_data.py  temp_continue_proj.py
src/paelladoc/: dependencies.py
src/tests/: conftest.py
(+156 files in other folders)
