[build-system]
requires = ["setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paelladoc"
version = "0.3.0"
description = "Interactive MCP server and documentation tooling for Paelladoc"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [ { name = "jlcases" } ]

dependencies = [
  "repopack==0.1.1",
  "PyYAML==6.0.1",
  "git+https://github.com/modelcontextprotocol/python-sdk.git"
]

[tool.setuptools]
packages = ["paelladoc"]
include-package-data = true

[tool.pytest.ini_options]
pythonpath = "."

[project.scripts]
paelladoc = "paelladoc.cli:main" 